Incorpotate MiniRequest for quicker http requests and update LICENSE

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "dependencies": {
     "colors":"latest",
-    "request":"latest"
+    "minirequest":"latest"
   },
   "author": "TinyDev",
   "license": "Apache-2.0"
