--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "colors":"latest",
     "minirequest":"latest"
   },
-  "author": "TinyDev",
+  "author": "FantasyIsBae",
   "license": "Apache-2.0"
 }
